# MyAssembler

./: CMakeLists.txt  README.md  install.bat  install.sh
include/: MyAssembler.h  auto_tchar.h  config.h  contig.h  contigreads.h  error.h  extend.h  get.h  getopt.h  logger.h  lookup3.h  nts.h  opt.h  read.h  readlist.h  runstats.h  seqhash.h  seqlist.h  seqtree.h  shindex.h  strrstr.h  trim.h  worker.h
src/c/linux/: CMakeLists.txt  MyAssembler.c  contig.c  contigreads.c  extend.c  get.c  logger.c  lookup3.c  opt.c  read.c  readlist.c  runstats.c  strrstr.c  trim.c
src/c/windows/: error.c  getopt.c  nts.c  runstats.c  seqhash.c  seqlist.c  seqtree.c  shindex.c  worker.c
src/java/: pom.xml
src/java/src/main/java/: module-info.java
src/java/src/main/java/com/example/realui/: HelloController.java  Main.java  config.txt
src/java/src/main/resources/com/example/realui/: realUI.fxml
